spectral sampling is enabled, but we will fix this as soon as possible.
Calculation overhead appears to be approximately 10-15% for RGB
renderings compared to version 5.4a.

Added spectral rendering to rvu as well, and made -cs and -cw
options standard across the rendering library.  I also brought
mkillum, ranimove, rsensor, and mksource into the fold.  These
tools were broken in the initial release.  (Hopefully, they are
working now, but none have been tested as yet.)
There was also an indexing bug in the spectral->RGB conversions
that made reds into blues and vice versa, which has been fixed.

Added i/o for spectral pictures to rmtxop, the first program that can
ingest them.  (Only rtrace, rcontrib, and rfluxmtx can render them.)
New symbolic rmtxop -c options, such as RGB, XYZ, S (for scotopic)
and M (for melanopic) make color conversions simpler.  Alternatively,
a reference matrix or picture may be given and the color space of
that file will be used.  The -C option takes either a symbolic
color space or reference file and is "sticky," so it applies to
all subsequent input files that do not have their own -c right ahead
of them.

Added spectral picture support to rcrop and radcompare.

Added new utility, rmtxcomb, which is hard to type and hard to
pronounce, and probably equally difficult to use.  Sort of a
combination of rmtxop and pcomb, it works with all the inputs and
outputs that rmtxop handles, but allows for general expressions
like those in pcomb for putting matrices together, working on
an element at a time.  (No resizing of matrices or accessing
neighboring elements, as permitted in pcomb.)  It saves memory
over rmtxop by operating on a row at a time, so can handle
input and output matrices with any number of rows.  It does
provide for a single matrix-multiplication operation at the end,
which only requires memory for that final matrix.

Added support for filtering hyperspectral images to pfilt.