@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rmtxcomb.1,v 1.3 2023/12/08 17:56:26 greg Exp $"
+.\" RCSid "$Id: rmtxcomb.1,v 1.4 2023/12/09 23:46:51 greg Exp $"
 .TH RMTXCOMB 12/5/2023 RADIANCE
 .SH NAME
 rmtxcomb - combine and convert matrices a row at a time
@@ -281,14 +281,14 @@ does not allow arbitrary expressions, limiting
 what can be accomplished easily on the command-line.
 In contrast,
 .I pcomb
-is fully programmable and operates on its input using a 4-byte/component
+is fully programmable and operates on its input using a
 scanline window, so it can handle much larger input dimensions.
-However, its results are always written out as RGBE or XYZE pictures,
-whose values must be positive and whose precision is +/-1%.
-Also, unlike
+It also handles single- and three-component float matrices on
+input and output, but unlike
 .I rmtxop,
 .I pcomb
-has not been extended to handle RADIANCE hyperspectral images.
+has not been extended to handle RADIANCE hyperspectral images
+or more general matrix data.
 .PP
 The
 .I rmtxcomb
